--- a/ACCAssistedDirector.Wpf/Views/ReplayPanelView.xaml
+++ b/ACCAssistedDirector.Wpf/Views/ReplayPanelView.xaml
@@ -11,19 +11,98 @@
              MinHeight="200" MinWidth="200">
     <Grid>
 
-        <ItemsControl ItemsSource="{Binding RaceEvents}">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="80"/>
+          <RowDefinition/>
+        </Grid.RowDefinitions>
 
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Vertical" />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
+        <Grid HorizontalAlignment="Stretch" Grid.Row="0" Height="80">
 
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <local:RaceEventView Margin="0,0,0,10"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
+            <Grid.RowDefinitions>
+              <RowDefinition/>
+              <RowDefinition/>
+              <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Style="{StaticResource SubTitleText}" 
+                       Text="Pilot" 
+                       Margin="2,0,0,0" 
+                       Grid.Row="0"/>
+
+            <ComboBox Name="cmbPilot" 
+                      ItemsSource="{Binding Pilots}" 
+                      SelectedItem="{Binding SelectedReplayPilot}"
+                      Grid.Column="2"
+                      Grid.ColumnSpan="2"
+                      Margin="2 2 2 2">
+                <ComboBox.ItemTemplate>
+                  <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding DisplayName}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+            <TextBlock Style="{StaticResource SubTitleText}" 
+                       Text="Duration" 
+                       Margin="2,0,0,0" 
+                       Grid.Row="1"/>
+
+            <ComboBox Name="cmbDuration" 
+                      ItemsSource="{Binding ReplayDurations}" 
+                      SelectedItem="{Binding  SelectedDuration}" 
+                      Grid.Row="1"
+                      Grid.Column="1"
+                      Margin="2 2 2 2">
+            </ComboBox>
+
+            <TextBlock Style="{StaticResource SubTitleText}" 
+                       Text="Start" 
+                       Margin="2,0,0,0" 
+                       Grid.Row="1"
+                       Grid.Column="2"/>
+
+            <ComboBox Name="cmbStart" 
+                    ItemsSource="{Binding ReplayStartTimes}" 
+                    SelectedItem="{Binding SelectedStartTime}" 
+                    Grid.Row="1"
+                    Grid.Column="3"
+                    Margin="2 2 2 2">
+            </ComboBox>
+
+            <Button Style="{StaticResource TransparentButton}"
+                    Command="{Binding QuickReplayCommand}"
+                    Content="Quick Replay"
+                    Grid.Row="2"
+                    Grid.ColumnSpan="4"
+                    FontSize="18"
+                    Margin="2 2 2 2"/>
+
+        </Grid>
+        
+        
+
+        <ItemsControl ItemsSource="{Binding RaceEvents}" Grid.Row="1">
+
+          <ItemsControl.ItemsPanel>
+              <ItemsPanelTemplate>
+                  <StackPanel Orientation="Vertical" />
+              </ItemsPanelTemplate>
+          </ItemsControl.ItemsPanel>
+
+          <ItemsControl.ItemTemplate>
+              <DataTemplate>
+                  <local:RaceEventView Margin="5,0,0,5"/>
+              </DataTemplate>
+          </ItemsControl.ItemTemplate>
 
         </ItemsControl>
 
